terraform/security.tf
#trivy:ignore:AVD-AWS-0104
resource "aws_security_group" "nextcloud_sg" {
  vpc_id = aws_vpc.nextcloud_vpc.id

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = [
      aws_subnet.nextcloud_subnet_a.cidr_block,
      aws_subnet.nextcloud_subnet_b.cidr_block
    ]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_subnet.nextcloud_subnet_a.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Define the ALB security group
#trivy:ignore:AVD-AWS-0104
resource "aws_security_group" "alb_sg" {
  vpc_id      = aws_vpc.nextcloud_vpc.id
  description = "Allow HTTPS traffic"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
